# hexlet-flask

./: .gitignore  pyproject.toml
hexlet_flask/: example.py  validator.py
hexlet_flask/templates/courses/: index.html  new.html
hexlet_flask/templates/users/: index.html  new.html  show.html
