[tool.poetry]
name = "hexlet-flask"
version = "0.1.0"
description = ""
authors = ["kotbarmaglot <allonewage@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
